gstdecode hijacking hardware acceleration though VAAPI

Because gstdecode as hardware decoding capability with a higher priority (100, without drm!) than VAAPI (1 for drm or 2 for wayland) it breaks most of decoding, bypassing available hardware decoding, on any system building vlc with gstreamer dev packages.

Solutions :

  • Remove the "auto" configuration in autotools
  • Lower its dec-dev priority to 1 (not sufficient, we need to shift up all others)
  • Make it explicit only (priority 0)