codec: gstreamer: lower priority

refs #28747